starting to work on login

--- a/views/rozlozeni.phtml
+++ b/views/rozlozeni.phtml
@@ -11,14 +11,14 @@
 
         <body>
                 <header>
-                        <h1>DevbookMVC - ukázkový web</h1>
+                        <h1>Picture sharing test</h1>
                 </header>
 
                 <nav>
                         <ul>
-                                <li><a href="clanek/uvod">Úvod</a></li>
+                                <li><a href="uvod">Home</a></li>
                                 <li><a href="clanek">Články</a></li>
-                                <li><a href="contact">Kontakt</a></li>
+                                <li><a href="login">Login</a></li>
                         </ul>
                 </nav>
                 <br clear="both" />
@@ -28,7 +28,7 @@
                 </article>
 
                 <footer>
-                        <p>Ukázkový tutoriál pro jednoduché MVC z programátorské sociální sítě
+                        <p>Creating from tutorial by
                         <a href="http://www.itnetwork.cz" target="_blank">itnetwork.cz</a>.</p>
                 </footer>
         </body>
